# android-project

./: .gitignore  .gitignore.backup  build_info.txt  gradle.properties
.github/workflows/: android-build.yml  android.yml
android-project/: .gitignore
android-project/.github/workflows/: android-build.yml
android-project/app/: build.gradle
android-project/app/src/main/cpp/: CMakeLists.txt  main.cpp
app/: build.gradle
app/jni/: Android.mk  Android.mk.bak
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp
